# wit-wasm

./: .gitignore  Cargo.toml  README.md  smoke.wasm  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
.cargo/: config.toml
examples/: smoke.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/js/: wit_wasm.component.core.wasm  wit_wasm.component.core2.wasm  wit_wasm.component.d.ts  wit_wasm.component.js
frontend/src/routes/: +page.svelte
js-smoke/: index.js  package.json
src/: lib.rs
wit/: smoke.wit
xtask/: Cargo.toml  README.md
xtask/src/: codegen.rs  lib.rs  main.rs  types.rs  utils.rs
