[package]
name = "wit-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"

[dependencies.wit-bindgen]
git = "https://github.com/bytecodealliance/wit-bindgen"
version = "0.7.0"

[dev-dependencies.wasmtime]
version = "11"
features = ["component-model"]
git = 'https://github.com/bytecodealliance/wasmtime'
