[package]
name = "wit-wasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
lazy_static = "1.4.0"
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" } # has wasi linker too
anyhow = "1.0"
tokio = { version = "1.11.0", features = ["rt", "macros"] }

[workspace.dependencies.wasmtime]
version = "11"
features = ["component-model"]
git = 'https://github.com/bytecodealliance/wasmtime'

[workspace.dependencies.wit-bindgen]
git = "https://github.com/bytecodealliance/wit-bindgen"
version = "0.7.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
getrandom = { version = "0.2.10" }
# wit-component = "0.11.0"

# if target is wasm32-unknown-unknown but NOT wasm32-wasi, use getrandom with `js` feature
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[target.wasm32-wasi.dependencies]
getrandom = { version = "0.2.10" }

[dependencies.wit-bindgen]
workspace = true

[dev-dependencies.wasmtime]
workspace = true

[dev-dependencies]
wasmtime-wasi = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1.68"

# [patch.crates-io]
# wasmtime = { git = 'https://github.com/bytecodealliance/wasmtime' } # v11 is not yet published

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
