[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# // * [????-??-??] 0xa - original version
# // * [2023-01-05] 0xb - `export` introduces an alias
# // * [2023-02-06] 0xc - `export` has an optional type ascribed to it
# // * [2023-05-10] 0xd - imports/exports drop URLs, new discriminator byte which
# //                      allows for `(import (interface "...") ...)` syntax.
# pub(crate) const WASM_COMPONENT_VERSION: u16 = 0xd;
# [`jco`] currently only can handle version 0xc, so set wit-component back to then
wit-component = "0.11.0"                                                       # Creates and encodes the component
toml = "0.7.4"
js-component-bindgen = { git = "https://github.com/bytecodealliance/jco.git" } # Creates the JS bindings
lazy_static = { workspace = true }
wasmtime-wasi = { workspace = true }                                           # For the wasm preview2 adpater
anyhow = { workspace = true }
tokio = { workspace = true }                                                   # async runtime
wasmtime = { workspace = true }                                                # Wasm runtime Loads our component
